<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/greenBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/bottom_sheet_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:ellipsize= "end"
        android:fontFamily="sans-serif"
        android:maxLines="1"
        android:textAlignment="center"
        android:text="@string/detected"
        android:textColor="@color/pielBackground"
        android:textSize="20dp"
        android:scaleType="centerCrop" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:paddingBottom="30dp">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="125dp"
            android:layout_height="140dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/id_roya"
            android:scaleType="centerCrop"
            android:src="@drawable/roya"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.henryuide.pruebacoffe.pestsearch.BottomSheetScrimView
            android:id="@+id/bottom_sheet_scrim_view"
            android:layout_width="125dp"
            android:layout_height="140dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.568"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"
            android:text="@string/msg_roya2"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"/>
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"
            android:textColor="@color/orangeBackground"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle1"
            />

        <TextView
            android:id="@+id/tvScientificName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/orangeBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintStart_toEndOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/tvDescriptions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvScientificName" />

        <TextView
            android:id="@+id/tvDescriptions1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/pielBackground"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescriptions" />

        <ImageView
            android:id="@+id/textView3"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="336dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/pielBackground"
            android:src="@drawable/baseline_device_thermostat_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescriptions1" />

        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="15dp"
            android:layout_height="18dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/tvDescriptions1" />

        <TextView
            android:id="@+id/tvSeeMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/see_more"
            android:textColor="@color/pielBackground"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:srcCompat="@drawable/ic_info_24"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/tvDescriptions1"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
